--- a/stlsite/templates/stlsite/demoScreenMobile.html
+++ b/stlsite/templates/stlsite/demoScreenMobile.html
@@ -3,20 +3,21 @@
 <div id="map_canvas"></div>
 <head>
   <title>STreetLight </title>
-  <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+  <meta name="viewport" content="width=device-width">
   <meta charset="utf-8">
 </head>
 <style type "text/css">
-#container  { background-color:#F0F0F0; width:1600px; margin:0 auto;  }
+#container  { background-color:#F0F0F0; width:1800px; margin:0 auto;  }
 #header   { background-color:#908886; height:100px; }
-#content  { background-color:#444444; float:right; width:800px; height:250px; }
-#table  { background-color:#F5F5F5; float:right; width:800px; height:440px;overflow-y:scroll}
-#title  { background-color:#F5F5F5; float:left; width:800px; height:100px; }
-#Menu  { background-color:#708877; float:left; width:800px; height:100px; }
+#content  { background-color:#444444; float:left; width:900px; height:250px; }
+#table  { background-color:#F5F5F5; float:left; width:900px; height:550px;overflow-y:scroll}
+#title  { background-color:#708877; float:left; width:800px; height:130px; }
+#Menu  { background-color:#708877; float:left; width:900px; height:100px; }
 #Menu2  { background-color:#004422; float:left; width:800px; height:50px; }
-#sideinfo  { background-color:#DCDAD9; float:right; width:800px; height:400px; }
+#sideinfo  { background-color:#DCDAD9; float:right; width:900px; height:400px; }
 #footer   { background-color:#555555; clear:both; height:100px; }
 #map{
+    width:100%;
   height:100%;
 }
 </style>
@@ -24,33 +25,8 @@
     #map, html, body {
         padding: 0;
         margin: 0;
-        width: 960px;
-        height: 700px;
-    }
-
-    #panel {
-        width: 200px;
-        font-family: Arial, sans-serif;
-        font-size: 13px;
-        float: right;
-        margin: 10px;
-    }
-
-    #color-palette {
-        clear: both;
-    }
-
-    .color-button {
-        width: 14px;
-        height: 14px;
-        font-size: 0;
-        margin: 2px;
-        float: left;
-        cursor: pointer;
-    }
-
-    #delete-button {
-        margin-top: 5px;
+        width: 800px;
+        height: 800px;
     }
 </style>
 <STYLE type="text/css">
@@ -74,140 +50,17 @@
 }
 /*	end styles for the ContextMenu	*/
 </STYLE>
-
 <BODY onload="initMap()">
-
-<div id="container">
-<div id="title"><h1>StreetLight Control</h1></div>
-<div id="Menu">
-  <input style="margin-left: 50px; margin-top: 10px; WIDTH: 120pt; HEIGHT: 60pt" type=button value="STLight"  OnClick="window.location='/STLight/'">
-  <input style="margin-left: 20px; WIDTH: 120pt; HEIGHT: 60pt"  type=button value="Repeater"  OnClick="window.location='/SetRepeater/'">
-  <input style="margin-left: 20px; WIDTH: 120pt; HEIGHT: 60pt"  type=button value="Monitoring"  OnClick="window.location='/Monitoring/'">
-  <input style="margin-left: 20px; WIDTH: 120pt; HEIGHT: 60pt"  type=button value="CommandHistory"  OnClick="window.location='/CommandHistory/'">
+<div id="title"><h1 align = 'center'>StreetLight Control</h1></div>
+<div style="width: 100%; height: 1000px; float:left;" id="map" ></div>
 </div>
 
-<div id="Menu2">
-  <!-- 라디오버튼을 통해 각각의 아이콘 또는 Zone, Cell을 표시 하기-->
-  <form name = "checkForm" style = "height: 25pt">
-    <input type="checkbox" name="chk_info" onclick = "CheckBoxChecked(this,'ST')"checked >가로등아이콘
-    <input type="checkbox" name="chk_info" onclick = "CheckBoxChecked(this,'RP')" >중계기 아이콘
-    <input type="checkbox" name="chk_info" onclick = "CheckBoxChecked(this,'ZN')" >Zone 아이콘
-    <input type="checkbox" name="chk_info" onclick = "CheckBoxChecked(this,'CL')" >Cell 아이콘
-    <input type="button"   name="btn_info" onclick = "CheckBoxChecked(this,'RS')" value="지도설정 초기화" margin-bottom = "100pt">
-    <div id="color-palette"></div>
-
-  </form>
-<div style="width: 800px; height: 570px; float:left;" id="map" ></div>
-</div>
-
-<div id="content">
-    <h2> Zone단위 조도 변경</h2>
-    <form action ="/ChangeStatus/" method="POST" name = "Zones" onsubmit="OnClose()">
-  {% csrf_token %}
-  	Zone(Cell):
-   {% if findZone %}
-   <select name="zoneSel" onChange="javascript:selectEvent(this)">
-    {% for  findZones in findZone %}
-     <option name="zoneSel" value={{findZones.zoneName}} selected>{{findZones.zoneName}}</option>
-    {% endfor %}
-   {% else %}
-    no zone data
-    {% endif %}
-  </select><p>
-  조도 설정: <input name="status" type=text size=2 maxlength=2 onkeypress='return event.charCode >= 48 && event.charCode <= 57'><p>
-  <!--위치 검색: <input name="status" type=text size=2 maxlength=2 onkeypress='return event.charCode >= 48 && event.charCode <= 57'><p>-->
-  <input type=submit value="조도 변경">
-  <input type=reset value="초기화">
- </form>
-
-   <div id="table">
-      <p><h2>StreetLight Table</h2>
-   <table cellspacing=1 width=700 border=1>
-   <tr>
-     <td width=50><p align=center>NO</p></td>
-     <td width=100><p align=center>Device Code</p></td>
-     <td width=320><p align=center>Location</p></td>
-     <td width=100><p align=center>Zone</p></td>
-     <td width=100><p align=center>Status</p></td>
-   </tr>
-     <ul>
-       {% if Location %}
-         {% for boardRow in Location %}
-         <tr>
-         <td width=50><p align=center><a href="/STLInfo/{{boardRow.id}}" onclick="window.open(this.href,'STLInfo','width=820,height=570,top=50,left=150'); return false"  >{{ boardRow.id }}</a></p></td>
-         <td width=100><p align=center><a href="/STLInfo/{{boardRow.id}}" onclick="window.open(this.href,'STLInfo','width=820,height=570,top=50,left=150'); return false" >{{ boardRow.code }}</a></p></td>
-         <td width=100><p align=center>{{ boardRow.loc }}</p></td>
-         <td width=100><p align=center>{{ boardRow.zone.zoneName }}</p></td>
-         <td width=100><p align=center>{{ boardRow.luminous }}%</p></td>
-         </tr>
-         {% endfor %}
-     </ul>
-   {% else %}
-     <p>No Data.</p>
-     <tr>
-     <td width=50, height = 20><p align=center>{{ boardRow.id }}</p></td>
-     <td width=100><p align=center>{{ boardRow.code }}</p></td>
-       <td width=100><p align=center>{{ boardRow.loc }}</p></td>
-     <td width=100><p align=center>{{ boardRow.zone.zoneName }}</p></td>
-     <td width=100><p align=center>{{ boardRow.luminous }}%</p></td>
-     </tr>
-   {% endif %}
-   </table>
-   {% for page in totalPageList %}
-       <a href="/listSpecificPageWork?current_page={{page}}" >
-       [
-       {% ifequal page current_page %}
-           <b>
-       {% endifequal %}
-       {{page}}
-
-       {% ifequal page current_page  %}
-           </b>
-       {% endifequal %}
-       ]
-   {% endfor %}
-   </td> </tr>
-   </table>
-   <table width=700>
-         <tr><td width = 10><input type=button value="Input"  OnClick="window.location='/InputSTLight'"></td>
-             <td><form name=searchf method=post action="/searchZone/">
-               {% csrf_token %}
-                 <p align=right>zone: <input type=text name=searchZone size=18  maxlength=50>
-                 <input type=submit value="Search"></p>
-               </form>
-             </td>
-         </tr>
-     </table>
-</div>
-</div>
-
-</div>
-
-<form name="frmPopup" method="POST">
-	  {% csrf_token %}
-<input type="hidden" name="polygonLat">
-<input type="hidden" name="polygonLng">
-<input type="hidden" name="polygonColor">
-</form>
-<form name="positionUpdate" method="POST">
-	  {% csrf_token %}
-<input type="hidden" name="STLLat">
-<input type="hidden" name="STLLng">
-<input type="hidden" name="markerID">
-</form>
-<form name="deletePolygon" method="POST">
-	  {% csrf_token %}
-<input type="hidden" name="zoneID">
-</form>
-<button id="delete-button">Delete Selected Shape</button>
-</body>
-</html>
 
 
 <script type="text/javascript" src="http://maps.google.com/maps/api/js??key=AIzaSyCEXAlEGffz0nDACY-PTPg3kiTFWPGyatY&libraries=drawing"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 <SCRIPT type="text/javascript">
-var latlng          = new google.maps.LatLng('37.483573', '126.892567');
+var latlng          = new google.maps.LatLng('37.483573', '126.892567');//E-SPACE 건물임.
 var STLightControl  = false;
 var RepeaterControl = false;
 var zoneControl     = false;
@@ -256,11 +109,28 @@ var selectedColor;
 var colorButtons = {};
 var drawingManager;
 var polygonLoad;
+
+
 //ContextMenu의 생성자  전달된 매개변수를 새 개의 속성으로 초기화 함.
+
+function numkeyCheck(event)
+{
+  var keyValue = event.keyCode;
+  if( ((keyValue >= 48) && (keyValue <= 57)) )
+    return true;
+  else
+    return false;
+}
+
+
+
 function ContextMenu(map, options){
   //defualt 값으로{}를 준다
 	options = options || {};
 	this.setMap(map);
+//끝
+
+
 
 //아직은 오버레이를 지도에 연결 할 수 없다. 지도의 창은 지도에 객체가 표시되는 순서를 지정하므로,
 //모든 지도의 창이 사용 가능한지 확인해야 함. api는 이러한 상황이 발생했음을 나타내는 도우미 메서드를 제공합니다.
@@ -502,7 +372,110 @@ ContextMenu.prototype.getMarker=function(marker, latlng, id){
   markerPosition= marker;
   markerID = id;
 };
+function ChangeSwitchAll(id)
+{
+  var butn = document.getElementById(id);
+  if(butn.value =="on")
+  {
+    butn.value = "off"
+    {% for boardRow in Location %}
+     var butn_stlight = document.getElementById("{{boardRow.id}}");
+     var butnH_stlight = document.getElementById("{{boardRow.id}}hidden");
+     if ("{{boardRow.ltAuto}}" != "Locked")
+     {
+       butn_stlight.value = "off"
+       butnH_stlight.value = "off"
+     }
 
+    {% endfor %}
+  }
+  else
+  {
+    butn.value = "on"
+    {% for boardRow in Location %}
+    var butn_stlight = document.getElementById("{{boardRow.id}}");
+    var butnH_stlight = document.getElementById("{{boardRow.id}}hidden");
+    if ("{{boardRow.ltAuto}}" != "Locked")
+    {
+      butn_stlight.value = "on"
+      butnH_stlight.value = "on"
+    }
+
+    {% endfor %}
+  }
+}
+function ChangeSwitchZone(id)
+{
+  var name = id+'hidden';
+  var butn = document.getElementById(id);
+  var butnH = document.getElementById(name);
+  if(butn.value =="on")
+  {
+    butn.value = "off"
+    butnH.value = "off"
+    {% for boardRow in Location %}
+    if (id =="{{boardRow.zone.zoneName}}")
+    {
+      if ("{{boardRow.ltAuto}}" != "Locked")
+      {
+        var butn_stlight = document.getElementById("{{boardRow.id}}");
+        var butnH_stlight = document.getElementById("{{boardRow.id}}hidden");
+        butn_stlight.value = "off"
+        butnH_stlight.value = "off"
+      }
+    }
+      {% endfor %}
+  }
+  else
+  {
+    butn.value = "on"
+    butnH.value = "on"
+    {% for boardRow in Location %}
+      if (id =="{{boardRow.zone.zoneName}}")
+      {
+        if ("{{boardRow.ltAuto}}" != "Locked")
+        {
+          var butn_stlight = document.getElementById("{{boardRow.id}}");
+          var butnH_stlight = document.getElementById("{{boardRow.id}}hidden");
+          butn_stlight.value = "on"
+          butnH_stlight.value = "on"
+        }
+      }
+      {% endfor %}
+  }
+}
+function ChangeSwitch(id)
+{
+  var name = id+'hidden';
+  var butn = document.getElementById(id);
+  var butnH = document.getElementById(name);
+  if(butn.value =="on")
+  {
+    butn.value = "off"
+    butnH.value = "off"
+  }
+  else
+  {
+    butn.value = "on"
+    butnH.value = "on"
+  }
+}
+function ChangeLocked(id)
+{
+  var name = id+'hidden';
+  var butn = document.getElementById(id);
+  var butnH = document.getElementById(name);
+  if(butn.value =="O")
+  {
+    butn.value = "X"
+    butnH.value = "UnLocked"
+  }
+  else
+  {
+    butn.value = "O"
+    butnH.value = "Locked"
+  }
+}
 function CheckBoxChecked(chkbox, id)
 {
   if(id == 'RS')
@@ -510,7 +483,7 @@ function CheckBoxChecked(chkbox, id)
     for(i=0; i < checkForm.chk_info.length; i++){
       checkForm.chk_info[i].checked = false;
     }
-    latLng = {lat: 37.483573, lng: 126.892567};
+    latLng = {lat: 37.46623, lng: 126.887167};
       initMap();
   }
   for(i=0; i < checkForm.chk_info.length; i++) {
@@ -582,18 +555,9 @@ function makeColorButton (color) {
     return button;
 }
 
-function buildColorPalette () {
-    var colorPalette = document.getElementById('color-palette');
-    for (var i = 0; i < colors.length; ++i) {
-        var currColor = colors[i];
-        var colorButton = makeColorButton(currColor);
-        colorPalette.appendChild(colorButton);
-        colorButtons[currColor] = colorButton;
-    }
-    selectColor(colors[0]);
-}
+
 var map;
-var latLng = {lat: 37.483573, lng: 126.892567};
+var   latLng = {lat: 37.46623, lng: 126.887167};
 function initMap() {
     map = new google.maps.Map(document.getElementById('map'), {
     center: latLng,
@@ -708,6 +672,13 @@ var polygonIndex;
                     newShape.setMap(null);
                 }
             }
+            if (newShape.type === google.maps.drawing.OverlayType.POLYLINE) {
+                var path = newShape.getPath();
+                path.removeAt(e.vertex);
+                if (path.length < 2) {
+                    newShape.setMap(null);
+                }
+            }
         }
         setSelection(newShape);
     });
@@ -720,7 +691,6 @@ var polygonIndex;
     polygon.addListener('rightclick', DrawingMenu, polygon);
   });
   google.maps.event.addListener(drawingManager, 'drawingmode_changed', clearSelection);
-  google.maps.event.addDomListener(document.getElementById('delete-button'), 'click', deleteSelectedShape);
 
   function DrawingMenu(eventName, polygon) {
     drawingMenu.putPolygon(polygons, polygonIndex);
@@ -734,31 +704,36 @@ var polygonIndex;
               latlng = new google.maps.LatLng("{{ Locations.posX }}", "{{ Locations.posY }}");
               //boundary=  Boundary( {{Locations.posX}}, {{Locations.posY}}, boundary );
               //Luminous에 따라서 각기 다른 아이콘 호출
-              if({{Locations.luminous}} == 0)
-                if("{{Locations.IsRepeater}}"== "off" )
-                  icons = STLight_0_1;
-                else
-                  icons = rept_0;
-              else if({{Locations.luminous}} <=30)
-                if("{{Locations.IsRepeater}}" =="off" )
-                  icons = STLight_30_1;
-                else
-                  icons = rept_30;
-              else if({{Locations.luminous}} <=60)
-                if("{{Locations.IsRepeater}}"=="off" )
-                  icons = STLight_60_1;
-                else
-                  icons = rept_60;
-              else if({{Locations.luminous}} <=90)
-                if("{{Locations.IsRepeater}}"== "off" )
-                  icons = STLight_90;
-                else
-                  icons = rept_90;
-              else if({{Locations.luminous}} <=100)
-                if("{{Locations.IsRepeater}}"== "off" )
-                  icons = STLight_100;
-                else
-                  icons = rept_100;
+              if("{{Locations.switch}}" == "off")
+                icons= STLight_0_1;
+              else {
+                if({{Locations.luminous}} == 0)
+                  if("{{Locations.IsRepeater}}"== "off" )
+                    icons = STLight_0_1;
+                  else
+                    icons = rept_0;
+                else if({{Locations.luminous}} <=30)
+                  if("{{Locations.IsRepeater}}" =="off" )
+                    icons = STLight_30_1;
+                  else
+                    icons = rept_30;
+                else if({{Locations.luminous}} <=60)
+                  if("{{Locations.IsRepeater}}"=="off" )
+                    icons = STLight_60_1;
+                  else
+                    icons = rept_60;
+                else if({{Locations.luminous}} <=90)
+                  if("{{Locations.IsRepeater}}"== "off" )
+                    icons = STLight_90;
+                  else
+                    icons = rept_90;
+                else if({{Locations.luminous}} <=100)
+                  if("{{Locations.IsRepeater}}"== "off" )
+                    icons = STLight_100;
+                  else
+                    icons = rept_100;
+              }
+
               //마커를 구글 맵에 입력
               var marker = new google.maps.Marker({
                   position: latlng,
@@ -887,7 +862,6 @@ if(markerControl[1] == true){
   }
 }
 initMap();
-buildColorPalette ();
 function showContextMenu(caurrentLatLng  ) {
       var projection;
       var contextmenuDir;
